Comment out survey questions to create a random rune generator.

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <h3>Answer a few questions to get your rune of the day!</h3>
     <br><br>
     <form id="rune-survey">
-      <h4>When is your birthday?</h4>
+      <!-- <h4>When is your birthday?</h4>
       <input type="date" id="birthday"></input>
       <h4>What is your favorite season?</h4>
-      <input type="dropdown" id="season">
+      <input type="dropdown" id="season"> -->
         <!--put seasons as dropdown selections here -->
-      </input>
+      <!-- </input>
       <h4>Pick a number between 1 and 9:</h4>
-      <input type="dropdown" id="number">
+      <input type="dropdown" id="number"> -->
         <!--put numbers 1-9 as dropdown selections here -->
-      </input><br><br>
-      <button type="submit" id="submit-rune-survey" onclick="getRandomInteger()">Submit to see your rune!</button>
+      <!-- </input><br><br> -->
+      <button type="submit" id="submit-rune-survey" onclick="getRandomInteger()">Click to see your rune!</button>
     </form>
   </div>
   <div class="container hidden" id="results-div">
@@ -42,7 +42,7 @@
     <br><br>
     <button onclick="location.reload()">Take the quiz again</button>
     <br><br>
-    <button id="learn-more">Learn more about the runes!</button>
+    <!-- <button id="learn-more">Learn more about the runes!</button> -->
   </div>
 
 </body>
